# pyins

./: README.md  pyproject.toml
src/pyins/: cli.py  cmd_install.py  cmd_list.py  cmd_reinstall.py  cmd_uninstall.py  config.py  consts.py  parser.py
